--- a/data_explore.Rmd
+++ b/data_explore.Rmd
@@ -73,7 +73,8 @@ get_spp_map <- function(species){
 ```{r,echo=F,eval=FALSE,warning=FALSE,message=F}
 
 spp_list = spp_list%>%
-              mutate(am_area = NA,
+              mutate(total_area=NA,
+                     am_area = NA,
                      iucn_area=NA,
                      perc = NA,
                      am_perc=NA,
@@ -91,79 +92,102 @@ for (i in 1:nrow(spp_list)){
   spp_map <- get_spp_map(spp) #get species map
   
   #get just the aquamaps cells
-  am_spp_map = spp_map%>%
-                  filter(!is.na(am_prob))%>%
-                dplyr::select(loiczid,am_sid,am_prob)%>% #add in am_prob when we want to look at probability
-                  unique()
+#   am_spp_map = spp_map%>%
+#                   filter(!is.na(am_prob))%>%
+#                 dplyr::select(loiczid,am_sid,am_prob)%>% #add in am_prob when we want to look at probability
+#                   unique()
+  
+#   if(TRUE %in% duplicated(am_spp_map$loiczid)){
+#                   am_spp_map = am_spp_map%>%
+#                                 dplyr::select(loiczid,am_sid)%>%
+#                                   unique()}
+#   
   #rasterize aquamaps map
-  r_am_spp  <-  subs(loiczid_raster, 
-                     am_spp_map[ , c('loiczid', 'am_sid')], 
-                     by = 'loiczid', 
-                     which = 'am_sid', 
-                     subsWithNA = TRUE)
+#   r_am_spp  <-  subs(loiczid_raster, 
+#                      am_spp_map[ , c('loiczid', 'am_sid')], 
+#                      by = 'loiczid', 
+#                      which = 'am_sid', 
+#                      subsWithNA = TRUE)
 #   
 #   spp_list[i,]$am_area = area(r_am_spp,na.rm=T)%>%
 #               cellStats(.,stat='sum')
 #   
   
   #get the iucn cells
-  iucn_map <- spp_map %>%
-    mutate(iucn_pres = iucn_area > 0)%>%
-      dplyr::select(loiczid,iucn_area,am_sid,am_prob,iucn_pres)%>%
-        unique()
+#   iucn_map <- spp_map %>%
+#     mutate(iucn_pres = iucn_area > 0)%>%
+#       dplyr::select(loiczid,iucn_area,am_sid,am_prob,iucn_pres)%>%
+#         unique()
   
   #TODO: incorporate the iucn_area (area of cell that species overlaps with...I think thats what it is)
   
   #this is incorporated because there are some duplications for loiczids with IUCN cells. I'm guessing this is because of the parent/subpopulations?
   
-   if(TRUE %in% duplicated(iucn_map$loiczid))next()
-#   
+#    if(TRUE %in% duplicated(iucn_map$loiczid))next()
+# #   
 #  rasterize IUCN map
-  r_iucn_spp <- subs(loiczid_raster, 
-                     iucn_map[ , c('loiczid', 'iucn_pres')], 
-                    by = 'loiczid', 
-                     which = 'iucn_pres', 
-                     subsWithNA = TRUE)
-#   
+#   r_iucn_spp <- subs(loiczid_raster, 
+#                      iucn_map[ , c('loiczid', 'iucn_pres')], 
+#                     by = 'loiczid', 
+#                      which = 'iucn_pres', 
+#                      subsWithNA = TRUE)
+# #   
 #   spp_list[i,]$iucn_area = area(r_iucn_spp,na.rm=T)%>%
 #                 cellStats(.,stat='sum')
   
+  
+  # Get total area (IUCN and AM combined)
+  allCells <- spp_map%>%
+                dplyr::select(loiczid)%>%
+                  mutate(value=1)%>%
+                  unique()
+            
+  
+  fullRange <- subs(loiczid_raster, 
+                     allCells[ , c('loiczid', 'value')], 
+                    by = 'loiczid', 
+                     which = 'value', 
+                     subsWithNA = TRUE)
+  
+  spp_list[i,]$total_area = area(fullRange,na.rm=T)%>%
+                              cellStats(.,stat='sum')
+  
   # get percent overlap of map
   
-  #iucn map cells
-  cells_iucn<-iucn_map%>%
-              filter(iucn_pres==TRUE)%>%
-              .$loiczid
-  cells_am <- am_spp_map%>%
-                filter(!is.na(am_sid))%>%
-                .$loiczid
-  
-  cells_total = unique(spp_map$loiczid)
-  cells_overlap = intersect(cells_iucn,cells_am)
-  
-   r_iucn_spp <- subs(loiczid_raster, 
-                      iucn_map[ , c('loiczid', 'iucn_pres')], 
-                     by = 'loiczid', 
-                      which = 'iucn_pres', 
-                      subsWithNA = TRUE)
-  
+#   #iucn map cells
+#   cells_iucn<-iucn_map%>%
+#               filter(iucn_pres==TRUE)%>%
+#               .$loiczid
+#   cells_am <- am_spp_map%>%
+#                 filter(!is.na(am_sid))%>%
+#                 .$loiczid
+#   
+#   cells_total = unique(spp_map$loiczid)
+#   cells_overlap = intersect(cells_iucn,cells_am)
+#   
+#    r_iucn_spp <- subs(loiczid_raster, 
+#                       iucn_map[ , c('loiczid', 'iucn_pres')], 
+#                      by = 'loiczid', 
+#                       which = 'iucn_pres', 
+#                       subsWithNA = TRUE)
+#   
   #percent overlap
-  perc = (length(cells_overlap)/length(cells_total))*100
-  spp_list[i,]$perc = perc
-  
-  am_only = setdiff(cells_am,cells_iucn)
-  iucn_only = setdiff(cells_iucn,cells_am)
-  
-  perc_am = (length(am_only)/length(cells_total))*100
-  perc_iucn = (length(iucn_only)/length(cells_total))*100
-  
-  spp_list[i,]$am_perc = perc_am
-  spp_list[i,]$iucn_perc = perc_iucn
-
-  spp_list[i,]$sm_range = ifelse(length(cells_am)<length(cells_iucn),'AM','IUCN') #what dataset has the smaller range
-  spp_list[i,]$sm_perc = length(cells_overlap)/min(length(cells_am),length(cells_iucn))*100 #this is the total percent of smaller range encompassed in the larger range
-cat(perc,perc_am,perc_iucn)
-
+#   perc = (length(cells_overlap)/length(cells_total))*100
+#   spp_list[i,]$perc = perc
+#   
+#   am_only = setdiff(cells_am,cells_iucn)
+#   iucn_only = setdiff(cells_iucn,cells_am)
+#   
+#   perc_am = (length(am_only)/length(cells_total))*100
+#   perc_iucn = (length(iucn_only)/length(cells_total))*100
+#   
+#   spp_list[i,]$am_perc = perc_am
+#   spp_list[i,]$iucn_perc = perc_iucn
+# 
+#   spp_list[i,]$sm_range = ifelse(length(cells_am)<length(cells_iucn),'AM','IUCN') #what dataset has the smaller range
+#   spp_list[i,]$sm_perc = length(cells_overlap)/min(length(cells_am),length(cells_iucn))*100 #this is the total percent of smaller range encompassed in the larger range
+# cat(perc,perc_am,perc_iucn)
+# 
 
 
   }
@@ -335,6 +359,14 @@ d <- spp_list%>%
 
 ggplot(d,aes(sm_perc,fill=sm_range))+geom_histogram(binwidth=1,alpha=.7)+
   scale_fill_discrete(name="Dataset with smaller range",labels=c("AquaMaps", "IUCN"))+labs(x='Percent of smalle range that falls within the larger range', y='Number of Species')
+
+reg <- ggplot(spp_list, aes(sm_perc,total_area,color=sm_range)) + geom_point() + geom_abline() + labs(y='Total Area', x='Percent overlap smaller range in larger', title='Comparing differences in area across species groups', fill='IUCN Category')
+
+print(reg)
+
+model = lm(spp_list$total_area~spp_list$sm_perc)
+summary(model)
+
 
 ```
 
